修改文件名，相关语句

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>重邮e站</title>
-	<link type="text/css" rel="stylesheet" href="竞赛页.css">
-	<script src="竞赛页.js"></script>
+	<link type="text/css" rel="stylesheet" href="index.css">
+	<script src="index.js"></script>
 	<script src="jquery.min.js"></script>
 </head>
 
@@ -107,7 +107,7 @@
 			</div>
 			<div class="block">
 				<div class="block_left">
-					<a href="登录页.html" style="text-decoration: none"><h4 style="background-color: #f6868b;width: 45%;line-height: 450%;text-align: center;border-radius: 5px;cursor: pointer" id="link">我的赛事</h4></a>
+					<a href="login.html" style="text-decoration: none"><h4 style="background-color: #f6868b;width: 45%;line-height: 450%;text-align: center;border-radius: 5px;cursor: pointer" id="link">我的赛事</h4></a>
 					<h4 style="background-color: #f6bd80;width: 45%;line-height: 450%;text-align: center;border-radius: 5px;cursor: pointer">我的组队</h4>
 				</div>
 				<div class="block_right">
@@ -224,7 +224,7 @@
             <p style="text-align: center">比赛论坛</p>
         </div>
         <div class="wt" onmouseover="a('.wt')" onmouseout="b('.wt')">
-            <img src="images/wt.png">
+            <img src="images/wt.PNG">
             <p style="text-align: center">我的问题</p>
         </div>
     </div>
