--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <title>重邮e站</title>
-	<link type="text/css" rel="stylesheet" href="index.css">
-	<script src="index.js"></script>
-	<script src="jquery.min.js"></script>
+	<link type="text/css" rel="stylesheet" href="css/index.css">
+	<script src="js/index.js"></script>
+	<script src="js/jquery.min.js"></script>
 </head>
 
 <body>
