登录界面，其他细节

--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>无标题文档</title>
+<title>注册</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/demo.css" />
 	<link rel="stylesheet" type="text/css" href="css/component.css" />
@@ -29,26 +29,26 @@
 	<section class="content">
 				<h2>重邮e站</h2>
 				<span class="input input--minoru">
-					<input class="input__field input__field--minoru" type="text" id="input-13" />
-					<label class="input__label input__label--minoru" for="input-13">
+					<input class="input__field input__field--minoru" type="text" id="input-1" />
+					<label class="input__label input__label--minoru" for="input-1">
 						<span class="input__label-content input__label-content--minoru">用户名</span>
 					</label>
 				</span>
 						<span class="input input--minoru">
-					<input class="input__field input__field--minoru" type="text" id="input-13" />
-					<label class="input__label input__label--minoru" for="input-13">
+					<input class="input__field input__field--minoru" type="text" id="input-2" />
+					<label class="input__label input__label--minoru" for="input-2">
 						<span class="input__label-content input__label-content--minoru">密码</span>
 					</label>
 				</span>
 				<span class="input input--minoru">
-					<input class="input__field input__field--minoru" type="text" id="input-14" />
-					<label class="input__label input__label--minoru" for="input-14">
+					<input class="input__field input__field--minoru" type="text" id="input-3" />
+					<label class="input__label input__label--minoru" for="input-3">
 						<span class="input__label-content input__label-content--minoru">手机号码</span>
 					</label>
 				</span>
 				<span class="input input--minoru">
-					<input class="input__field input__field--minoru" type="text" id="input-14" />
-					<label class="input__label input__label--minoru" for="input-14">
+					<input class="input__field input__field--minoru" type="text" id="input-4" />
+					<label class="input__label input__label--minoru" for="input-4">
 						<span class="input__label-content input__label-content--minoru">邮箱</span>
 					</label>
 				</span>
