--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>无标题文档</title>
+<title>登录</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/demo.css" />
 	<link rel="stylesheet" type="text/css" href="css/component.css" />
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+
 	<div class="container">
 	<section class="content">
 				<h2>重邮e站</h2>
@@ -40,15 +41,20 @@
 						<span class="input__label-content input__label-content--minoru">密码</span>
 					</label>
 				</span>
-				<span class="input input--minoru">
-					<input class="input__field input__field--minoru" type="text" id="input-15" />
+    </section>
+    <section>
+			<span class="input__captcha">
+                <img src="images/captcha.jpg" style="height: 3em;">
+					<input class="input__field input__field__captcha--minoru" type="text" id="input-15" />
 					<label class="input__label input__label--minoru" for="input-15">
 						<span class="input__label-content input__label-content--minoru">验证码</span>
 					</label>
-				</span>
-			</section>
-		<input type="button" class="asd" value="登录">
-		<a href="注册页.html"><input class="asd" value="注册账号" type="button"></a>
+            </span>
+    </section>
 	</div>
+    <div id="button" style="text-align: center">
+    <input type="button" class="asd" value="登录">
+    <a href="register.html"><input class="asd" value="注册账号" type="button"></a>
+    </div>
 </body>
 </html>
