--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<div class="container">
-        <form action="verification.php" method="post">
+        <form action="check.php" method="post">
 	<section class="content">
 				<h2>重邮e站</h2>
 				<span class="input input--minoru">
@@ -44,17 +44,18 @@
     <section>
 			<span class="input__captcha">
                 <img src="verification.php" style="height: 3em;">
-					<input class="input__field input__field__captcha--minoru" type="text" id="input-15" />
-					<label class="input__label input__label--minoru" for="input-15">
+					<input class="input__field input__field__captcha--minoru" type="text" id="input-3" name="" />
+					<label class="input__label input__label--minoru" for="input-3">
 						<span class="input__label-content input__label-content--minoru" style="font-size: 18px">验证码</span>
 					</label>
             </span>
     </section>
+			<div id="button" style="text-align: center">
+				<button type="submit" class="asd">登录</button>
+				<a href="register.html"><input class="asd" value="注册账号" type="button"></a>
+			</div>
         </form>
 	</div>
-    <div id="button" style="text-align: center">
-        <button type="submit" class="asd">登录</button>
-    <a href="register.html"><input class="asd" value="注册账号" type="button"></a>
-    </div>
+
 </body>
 </html>
