验证码接口

--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
 	<div class="container">
         <form action="check.php" method="post">
 	<section class="content">
-				<h2>重邮e站</h2>
+				<h2>登录</h2>
 				<span class="input input--minoru">
 					<input class="input__field input__field--minoru" type="text" id="input-1" name="user" />
 					<label class="input__label input__label--minoru" for="input-1">
@@ -44,7 +44,7 @@
     <section>
 			<span class="input__captcha">
                 <img src="verification.php" style="height: 3em;">
-					<input class="input__field input__field__captcha--minoru" type="text" id="input-3" name="" />
+					<input class="input__field input__field__captcha--minoru" type="text" id="input-3" name="check" />
 					<label class="input__label input__label--minoru" for="input-3">
 						<span class="input__label-content input__label-content--minoru" style="font-size: 18px">验证码</span>
 					</label>
