--- a/register.html
+++ b/register.html
@@ -26,10 +26,11 @@
 
 <body>
 	<div class="container">
+        <form action="#" method="post">
 	<section class="content">
-				<h2>重邮e站</h2>
+				<h2>注册</h2>
 				<span class="input input--minoru">
-					<input class="input__field input__field--minoru" type="text" id="input-1" />
+					<input class="input__field input__field--minoru" type="text" id="input-1" name="user"/>
 					<label class="input__label input__label--minoru" for="input-1">
 						<span class="input__label-content input__label-content--minoru">用户名</span>
 					</label>
@@ -37,29 +38,26 @@
 						<span class="input input--minoru">
 					<input class="input__field input__field--minoru" type="text" id="input-2" />
 					<label class="input__label input__label--minoru" for="input-2">
-						<span class="input__label-content input__label-content--minoru">密码</span>
+						<span class="input__label-content input__label-content--minoru" name="nickname">昵称</span>
 					</label>
 				</span>
 				<span class="input input--minoru">
 					<input class="input__field input__field--minoru" type="text" id="input-3" />
 					<label class="input__label input__label--minoru" for="input-3">
-						<span class="input__label-content input__label-content--minoru">手机号码</span>
-					</label>
-				</span>
-				<span class="input input--minoru">
-					<input class="input__field input__field--minoru" type="text" id="input-4" />
-					<label class="input__label input__label--minoru" for="input-4">
-						<span class="input__label-content input__label-content--minoru">邮箱</span>
-					</label>
-				</span>
-				<span class="input input--minoru">
-					<input class="input__field input__field--minoru" type="text" id="input-15" />
-					<label class="input__label input__label--minoru" for="input-15">
-						<span class="input__label-content input__label-content--minoru">验证码</span>
+						<span class="input__label-content input__label-content--minoru" name="pwd">密码</span>
 					</label>
 				</span>
 			</section>
-		<input class="asd" value="注册账号" type="button">
+		<span class="input__captcha">
+                <img src="verification.php" style="height: 3em;vertical-align: center">
+					<input class="input__field input__field__captcha--minoru" type="text" id="input-5" name="check" />
+					<label class="input__label input__label--minoru" for="input-5">
+						<span class="input__label-content input__label-content--minoru" style="font-size: 18px">验证码</span>
+					</label>
+		</span>
+        <div style="text-align: center"> <button  class="asd" type="submit">注册账号</button></div>
+
+        </form>
 	</div>
 </body>
 </html>
