--- a/register.html
+++ b/register.html
@@ -26,7 +26,7 @@
 
 <body>
 	<div class="container">
-        <form action="#" method="post">
+        <form action="register.php" method="post">
 	<section class="content">
 				<h2>注册</h2>
 				<span class="input input--minoru">
