--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 </div>
 <div class="boby">
     <div class="main1">
-        <b><p style="color: #000000;font-size: 18px;cursor: pointer;margin: 0;">首页&gt;&gt;赛事专区</p></b>
+        <p style="font-weight: bold;color: #000000;font-size: 18px;cursor: pointer;margin: 0;">首页&gt;&gt;赛事专区</p>
         <div class="left1">
             <input type="text" value="请输入比赛或队伍关键词" class="search1" />
             <select class="select1" size="2"> <option value="0">比赛</option> <option value="1">队伍</option> </select>
             <img src="images/放大镜2.png" class="fangdajing2" />
             <ul class="fenlei">
                 <li>分类：</li>
-                <a href="#"><li>不限</li></a>
-                <a href="#"><li>正在报名</li></a>
-                <a href="#"><li>报名结束</li></a>
-                <a href="#"><li>即将报名</li></a>
+                <li><a href="#" style="text-decoration: none" >不限</a></li>
+                <li><a href="#" style="text-decoration: none" >正在报名</a></li>
+                <li><a href="#" style="text-decoration: none" >报名结束</a></li>
+                <li><a href="#" style="text-decoration: none" >即将报名</a></li>
             </ul>
             <div class="xiala1">
                 <div class="xialatiao1">
