--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
     </section>
     <section>
 			<span class="input__captcha">
-                <img src="verification.php" style="height: 3em;">
+                <img src="verification.php" alt="验证码" style="height: 3em;">
 					<input class="input__field input__field__captcha--minoru" type="text" id="input-3" name="check" />
 					<label class="input__label input__label--minoru" for="input-3">
 						<span class="input__label-content input__label-content--minoru" style="font-size: 18px">验证码</span>
