--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
 					</label>
 				</span>
 				<span class="input input--minoru">
-					<input class="input__field input__field--minoru" type="text" id="input-2" name="pwd"/>
+					<input class="input__field input__field--minoru" type="password" id="input-2" name="pwd"/>
 					<label class="input__label input__label--minoru" for="input-2">
 						<span class="input__label-content input__label-content--minoru">密码</span>
 					</label>
