--- a/admin/login.html
+++ b/admin/login.html
@@ -4,7 +4,7 @@
 <form name="form1" method="post" action="check.php">
   <table width="521" height="394" border="0" cellpadding="0" cellspacing="0">
     <tr>
-	  <td valign="top" background="images/login.jpg">
+	  <td valign="top">
 	    <table width="512" border="0" cellpadding="0" cellspacing="0">
 		  <tr>
 		    <td height="24" align="right">用户名：</td>
@@ -21,5 +21,6 @@
 	  </td>
 	</tr>
   </table>
+</form>
 </body>
 </html>
