删除部分冗余代码，主页赛事显示逻辑修正

--- a/admin/login.html
+++ b/admin/login.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="UTF-8">
+</head>
 <body>
 <form name="form1" method="post" action="check.php">
-    <table width="521" height="394" border="0" cellpadding="0" cellspacing="0">
+    <table width="521" border="0" cellpadding="0" cellspacing="0">
         <tr>
             <td valign="top">
                 <table width="512" border="0" cellpadding="0" cellspacing="0">
                     <tr>
                         <td height="24" align="right">用户名：</td>
-                        <td height="24" align="left"><input name="user" type="text" id="user" size="20"></td>
+                        <td height="24" align="left"><input name="user" title="" type="text" id="user" size="20" required></td>
                     </tr>
                     <tr>
                         <td height="24" align="right">密&nbsp;&nbsp;码：</td>
-                        <td height="24" align="left"><input name="pwd" type="password" id="pwd" size="20"></td>
+                        <td height="24" align="left"><input name="pwd" title="" type="password" id="pwd" size="20" required></td>
                     </tr>
                     <tr align="center">
-                        <td height="24" colspan="2"><input type="submit" name="Submit" value="提交"
-                                                           onClick="return check(form);"><input type="reset"
-                                                                                                name="Submit2"
-                                                                                                value="重填"></td>
+                        <td height="24" colspan="2">
+                            <input type="submit" name="Submit" value="提交">
+                            <input type="reset" value="重填">
+                        </td>
                     </tr>
                 </table>
             </td>
