登录界面前端图片上传

--- a/header.html
+++ b/header.html
@@ -14,7 +14,7 @@
                 <li>大事记</li>
                 <li>重邮图库</li>
                 <li>更多相关</li>
-                <li><input type="text" class="search" title=""> <img src="images/放大镜.png" class="fangdajing"></li>
+                <li><input type="text" class="search" title=""> <img src="images/search1.png" class="fangdajing"></li>
             </ul>
         </div>
     </div>
