修复登录问题

--- a/admin/add.html
+++ b/admin/add.html
@@ -36,6 +36,7 @@
                 <button type="submit">添加</button>
             </td>
         </tr>
+    </table>
 </form>
 <a href='index.php'>返回</a>
 </body>
