修正部分图标

--- a/footer.html
+++ b/footer.html
@@ -12,8 +12,8 @@
             </ul>
         </div>
         <!--qqwxxl-->
-        <p class="bq_lx"><img src="images/qqt.jpg"> <img src="images/wxt.jpg"> <a href="https://weibo.com/cyez"><img
-                src="images/xlt.jpg"></a></p>
+        <p class="bq_lx"><img src="images/qq.png"> <img src="images/wechat.png"> <a href="https://weibo.com/cyez"><img
+                src="images/weibo.png"></a></p>
         <div class="kk">
             <img src="images/QQ图片20180409175117.jpg" style="width: 80%">
         </div>
