--- a/qian.html
+++ b/qian.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>点击测试页面</title>
+    <title>我的组队</title>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
@@ -10,14 +10,12 @@
 <input type="button" value="我的组队">
 
 <script>
-
     let userId = document.getElementById('userId').innerText;
     let x;
     let all_data;
     let zu_name = document.getElementsByClassName('zu_name');
 
     $('input').click(function () {
-
         $.ajax({
             type: "post",
             url: 'try0.json',
@@ -51,10 +49,7 @@
                     $('.zu_dui0').click(function () {
                         $(this).children('.zu_mem').slideToggle("slow");
                     });
-
-
                 }
-
 
                 let zu_game = document.getElementsByClassName('zu_game');
                 let zu_time = document.getElementsByClassName('zu_time');
@@ -75,7 +70,6 @@
             }
         });
     });
-
 </script>
 
 </body>
