Find back password 1.5

--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar nav-static-top
  navbar-expand-md navbar-light fixed-top bg-light">
-    <a class="navbar-brand" href="#">竞赛组队系统</a>
+    <a class="navbar-brand" href="index.php">竞赛组队系统</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"><span
             class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
@@ -8,10 +8,10 @@
             <li class="nav-item dropdown "><a class="nav-link dropdown-toggle text-center dropdown" href="#"
                                               data-toggle="dropdown"> 首页 </a>
                 <div class="dropdown-menu tab-content">
-                    <a class="dropdown-item text-center" href="#section1">赛事信息</a>
-                    <a class="dropdown-item text-center" href="#section2">热门赛事</a>
-                    <a class="dropdown-item text-center" href="#section3">组队信息</a>
-                    <a class="dropdown-item text-center" href="#section4">问答</a>
+                    <a class="dropdown-item text-center" href="index.php#section1">赛事信息</a>
+                    <a class="dropdown-item text-center" href="index.php#section2">热门赛事</a>
+                    <a class="dropdown-item text-center" href="index.php#section3">组队信息</a>
+                    <a class="dropdown-item text-center" href="index.php#section4">问答</a>
                 </div>
             </li>
             <li class="nav-item"><a class="nav-link w3ls-hover text-center" href="user_center.php">个人中心</a></li>
